--- a/Google_assistant_app/appdaemon.cfg
+++ b/Google_assistant_app/appdaemon.cfg
@@ -1,4 +1,4 @@
 [google]
 module = GoogleHome
 class = GoogleHome
-activation_boolean = input_boolean.alexa5
+activation_boolean = input_boolean.google_assistant
