--- a/custom_widgets/new_input_slider.yaml
+++ b/custom_widgets/new_input_slider.yaml
@@ -15,9 +15,7 @@ fields:
   StepValue: ""
 icons: []
 css: []
-static_icons:
-  icon_up: $input_slider_icon_up
-  icon_down: $input_slider_icon_down
+static_icons: []
 static_css:
   title_style: $new_input_slider_title_style
   title2_style: $new_input_slider_title2_style
