--- a/custom_css/variables.yaml
+++ b/custom_css/variables.yaml
@@ -12,3 +12,11 @@ new_input_slider_value_style: $style_title
 new_input_slider_slider_style: ""
 new_input_slider_widget_style: $background_style
 
+vertical_input_slider_title_style: $style_title
+vertical_input_slider_title2_style: $style_title2
+vertical_input_slider_minvalue_style: $style_title
+vertical_input_slider_maxvalue_style: $style_title
+vertical_input_slider_value_style: $style_title
+vertical_input_slider_slider_style: ""
+vertical_input_slider_widget_style: $background_style
+
