--- a/custom_css/variables.yaml
+++ b/custom_css/variables.yaml
@@ -28,3 +28,7 @@ light_with_brightness_slider_style: ""
 light_with_brightness_widget_style: $background_style
 light_with_brightness_icon_style_active: $style_active
 light_with_brightness_icon_style_inactive: $style_inactive
+
+radial_widget_style: $background_style
+
+thermo_widget_style: $background_style
