--- a/custom_widgets/heater.yaml
+++ b/custom_widgets/heater.yaml
@@ -8,7 +8,7 @@ post_service_inactive:
     service: homeassistant/turn_off
     entity_id: {{icon_entity}}
 post_service_slider_change:
-    service: input_slider/select_value
+    service: input_number/set_value
     entity_id: {{slider_entity}}
 fields:
   title: {{title}}
